# e2b-desktop

./: package.json  pnpm-lock.yaml
examples/basic-javascript/: package-lock.json  package.json
examples/basic-python/: pyproject.toml
